# games101

./: .gitignore  README.md
Assignmen0/: CMakeLists.txt
Assignment0/: main.cpp
Assignment1/: main.cpp  rasterizer.cpp
Assignment2/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: Texture.hpp  Triangle.cpp  main.cpp  rasterizer.cpp
Assignment4/: main.cpp
Assignment5/Code/: Renderer.cpp  Triangle.hpp
Assignment6/code/: Bounds3.hpp
Assignment7/code/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Renderer.cpp  Scene.cpp  Triangle.hpp  main.cpp
